--- a/api/package.json
+++ b/api/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"No tests yet...\""
   },
   "dependencies": {
-    "axios": "^0.25.0"
+    "axios": "^0.25.0",
+    "@azure/data-tables": "^13.2.0"
   },
   "devDependencies": {}
 }
